fix: imageCropper组件h5旋转截图修复

--- a/packages/vantui/src/image-cropper/index.less
+++ b/packages/vantui/src/image-cropper/index.less
@@ -1,5 +1,5 @@
 /* stylelint-disable comment-empty-line-before */
-.components-cropper {
+.van-cropper {
   position: fixed;
   left: 0;
   top: 0;
